# data_quality_validations

./: .env.example  README.md  pyproject.toml
services/: postgres.py  slack.py
services/db_validation/: db_validation_service.py  queries.py
tables/contracts_tape/: contracts_tape_config.yaml  handler.py
