[tool.poetry]
name = "data-quality-validations"
version = "0.1.0"
description = ""
authors = ["Débora Gama <debgama.developer@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyspark = "^3.5.3"
pyyaml = "^6.0.2"
psycopg2-binary = "^2.9.10"
pytz = "^2024.2"
sqlalchemy = "^2.0.36"
slack-sdk = "^3.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
